import java.time.Duration;

public class Cancion {
    private final String titulo;
    private final Duration duracion;
    private final String artista;

    public Cancion(String titulo, Duration duracion, String artista) {
        this.titulo = titulo;
        this.duracion = duracion;
        this.artista = artista;
    }
}
